test/manual/assignment/errors/assign_to_undeclared.sol
a = 1; // Should cause a compiler error - 'a' not declared